syntax = "proto3";

message Acknowledgement {
    int64 code = 1;
    bytes result = 2;
    string message = 3;
    string relayer = 4;
    int64 feeOption = 5;
}